[gd_scene load_steps=10 format=2]

[ext_resource path="res://Objects/UI/UI.gd" type="Script" id=1]
[ext_resource path="res://Menus/MainMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menus/SettingsMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Customize/Customize.tscn" type="PackedScene" id=4]
[ext_resource path="res://Resources/Menus/Back.png" type="Texture" id=5]
[ext_resource path="res://Menus/HelpMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://Resources/Menus/X.png" type="Texture" id=7]
[ext_resource path="res://Menus/AboutMenu.tscn" type="PackedScene" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.67451, 0.141176, 0.141176, 1 )

[node name="UI" type="Node2D"]
script = ExtResource( 1 )

[node name="hud" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="hud"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fuel" type="ProgressBar" parent="hud/Control"]
visible = false
margin_right = 68.0
margin_bottom = 449.0
custom_styles/fg = SubResource( 1 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveRight" type="TouchScreenButton" parent="hud/Control"]
position = Vector2( 1623.16, 859.636 )
scale = Vector2( 2, 2 )
normal = ExtResource( 5 )

[node name="Esc" type="TouchScreenButton" parent="hud/Control"]
position = Vector2( 1716.5, -31.3187 )
normal = ExtResource( 7 )

[node name="MoveLeft" type="TouchScreenButton" parent="hud/Control"]
position = Vector2( 320.361, 838.279 )
scale = Vector2( -2, 2 )
normal = ExtResource( 5 )

[node name="menus" type="CanvasLayer" parent="hud"]

[node name="MainMenu" parent="hud/menus" instance=ExtResource( 2 )]
visible = false
SettingsPath = NodePath("../SettingsMenu")
CustomizePath = NodePath("../CustomizeMenu")
UiPath = NodePath("../../..")
AboutPath = NodePath("../AboutMenu")
HelpPath = NodePath("../HelpMenu")

[node name="SettingsMenu" parent="hud/menus" instance=ExtResource( 3 )]
visible = false
UiPath = NodePath("../../..")

[node name="CustomizeMenu" parent="hud/menus" instance=ExtResource( 4 )]
visible = false
margin_left = 772.0
margin_top = 307.0
margin_right = 772.0
margin_bottom = 307.0
SettingsPath = NodePath("../SettingsMenu")
CustomizePath = NodePath(".")
UiPath = NodePath("../../..")

[node name="HelpMenu" parent="hud/menus" instance=ExtResource( 6 )]
visible = false
UiPath = NodePath("../../..")

[node name="AboutMenu" parent="hud/menus" instance=ExtResource( 10 )]
visible = false
UiPath = NodePath("../../..")
[connection signal="pressed" from="hud/Control/MoveRight" to="." method="_on_MoveRight_pressed"]
[connection signal="released" from="hud/Control/MoveRight" to="." method="_on_MoveRight_released"]
[connection signal="pressed" from="hud/Control/Esc" to="." method="_on_Esc_pressed"]
[connection signal="pressed" from="hud/Control/MoveLeft" to="." method="_on_MoveLeft_pressed"]
[connection signal="released" from="hud/Control/MoveLeft" to="." method="_on_MoveLeft_released"]
